environments/dev/apps/globex-ui/base/300-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    openshift.io/host.generated: "true"
  labels:
    app.kubernetes.io/instance: globex-app
    app.kubernetes.io/name: globex-ui
    app.kubernetes.io/part-of: globex-app
    app.kubernetes.io/version: 1.0.0
  name: globex-ui
spec:
  port:
    targetPort: http
  tls:
    insecureEdgeTerminationPolicy: Allow
    termination: edge
  to:
    kind: Service
    name: globex-ui
    weight: 100
  wildcardPolicy: None
